[metadata]
name = sparrow-mlpipes
version = 0.5.0
description = Tools for Nvidia DeepStream
author = Sparrow Computing
author_email = ben@sparrow.dev
license = MIT

[options]
packages =
    sparrow_mlpipes

install_requires = 
    numpy==1.26.0
    pyds @ https://github.com/NVIDIA-AI-IOT/deepstream_python_apps/releases/download/v1.2.0/pyds-1.2.0-cp310-cp310-linux_x86_64.whl

[options.extras_require]
dev =
    dvc[s3]
    fire
    jupyter
    opencv-python
    sparrow-datums
    uv

[tool.isort]
profile = black

[pylint.FORMAT]
disable = all
enable = unused-import

[pydocstyle]
convention = numpy
match = '((?!_test).)*\.py'
add-ignore = D100
