[metadata]
name = sparrow-mlpipes
version = 0.4.7
description = Tools for Nvidia DeepStream
author = Sparrow Computing
author_email = ben@sparrow.dev
license = MIT

[options]
install_requires = 
    numpy==1.24.4
    pyds @ https://github.com/NVIDIA-AI-IOT/deepstream_python_apps/releases/download/v1.1.6/pyds-1.1.6-py3-none-linux_x86_64.whl

[options.extras_require]
dev =
    black
    dvc
    dvc-s3
    fire
    isort
    jupyter
    opencv-python-headless
    pydocstyle
    pylint
    pytest
    pytest-cov
    sparrow-datums    

[pylint.FORMAT]
disable = all
enable = unused-import