[metadata]
name = sparrow-mlpipes
version = 0.4.7
description = Tools for Nvidia DeepStream
author = Sparrow Computing
author_email = ben@sparrow.dev
license = MIT

[options]
install_requires = 
    numpy==1.24.4

[options.extras_require]
dev =
    dvc[s3]
    fire
    jupyter
    opencv-python-headless
    sparrow-datums
    uv

[pylint.FORMAT]
disable = all
enable = unused-import